# meridian-summit-agent

./: .env.example  .gitignore  README.md
backend/: README.md  main.py  pyproject.toml
backend/cairn/: config.py  embeddings.py  loaders.py  paths.py  registry.py
backend/cairn/agents/: agent.py  model.py  offline.py  system_prompt.py  tools.py
backend/cairn/records/: __init__.py  memory_store.py  models.py  store.py
backend/cairn/retrieval/: __init__.py  attendee_retriever.py  hybrid_retriever.py  models.py  searchable.py
backend/data/: attendees.json  knowledge_base.json  sessions.json  speakers.json
frontend/: README.md  index.html  package.json  vite.config.js
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/components/: AttendeeCard.css  AttendeeCard.jsx  CairnStack.css  CairnStack.jsx  OutcomeCard.css  OutcomeCard.jsx  PhoneChat.css  PhoneChat.jsx  RegistrationsCard.css  RegistrationsCard.jsx  SessionCarousel.css  SessionCarousel.jsx  TracePane.css  TracePane.jsx
frontend/src/lib/: api.js  cards.js  format.js
frontend/src/styles/: tokens.css
